Frontend: StudentMode gap fix

--- a/src/Frontend/src/components/common/StudentMode/StudentMode.less
+++ b/src/Frontend/src/components/common/StudentMode/StudentMode.less
@@ -3,15 +3,5 @@
   justify-content: center;
   align-items: center;
   user-select: none;
-}
-
-.toggleWrapper label {
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-right: 0;
-}
-
-.toggleWrapper label {
-  margin-right: 8px;
-  height: 20px;
+  gap: 8px;
 }
